# datia-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
app/: main.py
app/agents/: __init__.py  graph.py  tools.py  workflow.py
app/api/: __init__.py  agents.py  api.py
app/config/: __init__.py  logging.py  settings.py
n8n/: get_inventory_data.json  get_sales_data.json
streamlit/: chat.py
streamlit/.streamlit/: config.toml
tests/: test_agent.ipynb
